--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $ git checkout gh-pages
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using ABC</p>
         <span class="octocat"></span>
       </footer>
 
